# snake-cube-solver

./: .gitignore  README.md  pyproject.toml
python/snake_cube/: solver.py  solver_test.py
rust/: Cargo.toml  run_tests_coverage.sh
rust/src/: lib.rs  lib_test.rs  main.rs
snake_cube/: solver.py  solver_test.py
